Removed qualifying_percent
