# docs/swagger.json
@@ -279,17 +279,9 @@
                     },
                     {
                         "type": "string",
+                        "default": "100",
                         "description": "reference to custom song",
                         "name": "custom_song",
-                        "in": "query"
-                    },
-                    {
-                        "maximum": 100,
-                        "minimum": 1,
-                        "type": "integer",
-                        "default": 100,
-                        "description": "qualifying percent of the level (just here for completeness, prob legacy)",
-                        "name": "qualifying_percent",
                         "in": "query"
                     },
                     {
@@ -427,15 +419,6 @@
                         "type": "string",
                         "description": "reference to custom song",
                         "name": "custom_song",
-                        "in": "query"
-                    },
-                    {
-                        "maximum": 100,
-                        "minimum": 1,
-                        "type": "integer",
-                        "default": 100,
-                        "description": "qualifying percent of the level (just here for completeness, prob legacy)",
-                        "name": "qualifying_percent",
                         "in": "query"
                     },
                     {
